--- a/ILDirectMessages/ILIncomingMessageCollectionViewCell.xib
+++ b/ILDirectMessages/ILIncomingMessageCollectionViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ILIncomingMessageCollectionViewCell" id="gTV-IL-0wX" customClass="ILIncomingMessageCollectionViewCell" customModule="ILDirect_iOS" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ILIncomingMessageCollectionViewCell" id="gTV-IL-0wX" customClass="ILIncomingMessageCollectionViewCell" customModule="ILDirectMessages" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -47,11 +47,36 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xpO-Yr-Ati">
                                 <rect key="frame" x="46" y="8" width="266" height="94.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3ee-2X-rem">
-                                        <rect key="frame" x="0.0" y="0.0" width="266" height="94"/>
+                                    <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wql-nc-dJH">
+                                        <rect key="frame" x="0.0" y="0.0" width="266" height="94.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3ee-2X-rem">
+                                                <rect key="frame" x="0.0" y="0.0" width="266" height="94"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            </imageView>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E06-gh-ZFA">
+                                                <rect key="frame" x="113" y="27" width="40" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="a7r-8F-bsN"/>
+                                                    <constraint firstAttribute="height" constant="40" id="dgz-RA-lJt"/>
+                                                </constraints>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <state key="normal" image="media-video-play-button">
+                                                    <color key="titleColor" red="0.2196078431372549" green="0.2196078431372549" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </imageView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Sample message text" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q45-jS-DgQ">
+                                        <constraints>
+                                            <constraint firstItem="E06-gh-ZFA" firstAttribute="centerX" secondItem="wql-nc-dJH" secondAttribute="centerX" id="5mE-N2-dr0"/>
+                                            <constraint firstItem="E06-gh-ZFA" firstAttribute="centerY" secondItem="wql-nc-dJH" secondAttribute="centerY" id="8af-uV-hYD"/>
+                                            <constraint firstItem="3ee-2X-rem" firstAttribute="leading" secondItem="wql-nc-dJH" secondAttribute="leading" id="MoC-Pp-o9A"/>
+                                            <constraint firstAttribute="trailing" secondItem="3ee-2X-rem" secondAttribute="trailing" id="NEr-sR-yQ2"/>
+                                            <constraint firstItem="3ee-2X-rem" firstAttribute="top" secondItem="wql-nc-dJH" secondAttribute="top" id="UGv-dy-V1o"/>
+                                            <constraint firstAttribute="bottom" secondItem="3ee-2X-rem" secondAttribute="bottom" id="hGc-9h-di6"/>
+                                        </constraints>
+                                    </view>
+                                    <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Sample message text" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q45-jS-DgQ">
                                         <rect key="frame" x="0.0" y="0.0" width="266" height="94"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <color key="textColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -63,13 +88,13 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Q45-jS-DgQ" secondAttribute="trailing" id="3sg-dt-z68"/>
                                     <constraint firstItem="Q45-jS-DgQ" firstAttribute="top" secondItem="xpO-Yr-Ati" secondAttribute="top" id="6Ae-WZ-WSI"/>
-                                    <constraint firstAttribute="bottom" secondItem="3ee-2X-rem" secondAttribute="bottom" id="OeF-Ue-a0c"/>
+                                    <constraint firstAttribute="trailing" secondItem="wql-nc-dJH" secondAttribute="trailing" id="Hrx-K7-dm3"/>
                                     <constraint firstAttribute="width" constant="266" id="TVI-5e-531"/>
-                                    <constraint firstItem="3ee-2X-rem" firstAttribute="top" secondItem="xpO-Yr-Ati" secondAttribute="top" id="Zdb-de-b39"/>
+                                    <constraint firstAttribute="bottom" secondItem="wql-nc-dJH" secondAttribute="bottom" id="bUQ-Jl-UdQ"/>
                                     <constraint firstItem="Q45-jS-DgQ" firstAttribute="leading" secondItem="xpO-Yr-Ati" secondAttribute="leading" id="gAa-Zm-bRA"/>
                                     <constraint firstAttribute="bottom" secondItem="Q45-jS-DgQ" secondAttribute="bottom" id="k9l-S9-qEz"/>
-                                    <constraint firstAttribute="trailing" secondItem="3ee-2X-rem" secondAttribute="trailing" id="yhF-cV-kiZ"/>
-                                    <constraint firstItem="3ee-2X-rem" firstAttribute="leading" secondItem="xpO-Yr-Ati" secondAttribute="leading" id="yxQ-gx-lWq"/>
+                                    <constraint firstItem="wql-nc-dJH" firstAttribute="top" secondItem="xpO-Yr-Ati" secondAttribute="top" id="mn7-Tp-SFe"/>
+                                    <constraint firstItem="wql-nc-dJH" firstAttribute="leading" secondItem="xpO-Yr-Ati" secondAttribute="leading" id="zxm-xv-oTf"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -112,9 +137,10 @@
                 <constraint firstItem="1fJ-sN-tcN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="yKf-v5-J27"/>
             </constraints>
             <connections>
+                <outlet property="backgroundImageView" destination="3ee-2X-rem" id="hdt-T2-mgf"/>
                 <outlet property="bottomLabel" destination="1fJ-sN-tcN" id="kVX-oV-uGC"/>
                 <outlet property="bottomLabelHeightConstraint" destination="BGh-WZ-Dlk" id="e2y-u6-uWI"/>
-                <outlet property="messageBubbleBackgroundImageView" destination="3ee-2X-rem" id="eJB-Y6-rRq"/>
+                <outlet property="mediaMessageContainerView" destination="wql-nc-dJH" id="fq3-XN-LEJ"/>
                 <outlet property="messageContainerView" destination="xpO-Yr-Ati" id="gXW-K4-I7d"/>
                 <outlet property="messageContainerWidthConstraint" destination="TVI-5e-531" id="DLz-2u-Tib"/>
                 <outlet property="profileImageView" destination="OwI-0J-E9Y" id="DZy-eZ-rUP"/>
@@ -128,4 +154,7 @@
             </connections>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="media-video-play-button" width="60" height="60"/>
+    </resources>
 </document>
