--- a/ILDirectMessages/ILOutgoingMessageCollectionViewCell.xib
+++ b/ILDirectMessages/ILOutgoingMessageCollectionViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ILOutgoingMessageCollectionViewCell" id="dzK-R0-rxa" customClass="ILOutgoingMessageCollectionViewCell" customModule="ILDirect_iOS" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ILOutgoingMessageCollectionViewCell" id="dzK-R0-rxa" customClass="ILOutgoingMessageCollectionViewCell" customModule="ILDirectMessages" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -28,10 +28,10 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fev-UT-WGo">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fev-UT-WGo">
                         <rect key="frame" x="0.0" y="20" width="320" height="110.5"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xfX-2x-uqU">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xfX-2x-uqU">
                                 <rect key="frame" x="282" y="72.5" width="30" height="30"/>
                                 <color key="backgroundColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -44,10 +44,10 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vn8-Qp-1WI">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vn8-Qp-1WI">
                                 <rect key="frame" x="8" y="8" width="266" height="94.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xl7-JI-1eB">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xl7-JI-1eB">
                                         <rect key="frame" x="0.0" y="0.0" width="266" height="94"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </imageView>
@@ -112,9 +112,9 @@
                 <constraint firstAttribute="trailing" secondItem="Fev-UT-WGo" secondAttribute="trailing" id="m0C-m8-Nqd"/>
             </constraints>
             <connections>
+                <outlet property="backgroundImageView" destination="xl7-JI-1eB" id="06m-R4-nzo"/>
                 <outlet property="bottomLabel" destination="N0U-T1-syX" id="DAT-Nr-6iP"/>
                 <outlet property="bottomLabelHeightConstraint" destination="tzD-KA-Xcu" id="Aj5-Os-YlV"/>
-                <outlet property="messageBubbleBackgroundImageView" destination="xl7-JI-1eB" id="R73-vK-wRK"/>
                 <outlet property="messageContainerView" destination="vn8-Qp-1WI" id="jZ2-r2-Kn4"/>
                 <outlet property="messageContainerWidthConstraint" destination="VPG-uU-Nqu" id="P0M-Kv-gRs"/>
                 <outlet property="profileImageView" destination="xfX-2x-uqU" id="0Gg-lH-6El"/>
