--- a/ILDirectMessages/Base.lproj/Main.storyboard
+++ b/ILDirectMessages/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rdr-6Z-ZJu" customClass="ILDirectMessagesCollectionView" customModule="ILDirectMessages" customModuleProvider="target">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rdr-6Z-ZJu" customClass="ILDirectMessagesCollectionView" customModule="ILDirectMessages" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="557"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewLayout key="collectionViewLayout" id="O6k-W0-mki" customClass="ILDirectMessagesCollectionViewFlowLayout" customModule="ILDirectMessages" customModuleProvider="target"/>
